# RP2040_Programs

./: .gitignore  README.md  _typos.toml  build-size.sh  clean_cargo.sh
.githooks/: pre-commit
.github/workflows/: fmt.yml
conway_game_of_life/: Cargo.toml  Justfile  build-size.sh
conway_game_of_life/src/: main.rs
e-paper-big-text/: Cargo.toml  Justfile
e-paper-big-text/src/: main.rs
e-paper-display/: Cargo.toml
e-paper-display-ascii/: Cargo.toml
e-paper-display-ascii/src/: main.rs  startup.rs
e-paper-display-ratatui/: Cargo.toml
e-paper-display-ratatui/src/: main.rs
e-paper-display/src/: main.rs
internal_temp_sensor/: Cargo.toml
internal_temp_sensor/src/: main.rs
led_flash/: Cargo.toml  Justfile  flash_nuke.uf2
led_flash/src/: main.rs
uart_serial_monitor/: Cargo.toml  Justfile
uart_serial_monitor/src/: main.rs
