[package]
name = "internal_temp_sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-0-2 = { version = "0.2.7", package = "embedded-hal" }
fugit = "0.3.9"
heapless = "0.9.2"
panic-halt = "1.0.0"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl"] }
smart-leds = "0.4.0"
static_cell = "2.1.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
ws2812-pio = "0.9.0"

[profile.dev]
codegen-units = 1 
debug = 2 
debug-assertions = true
incremental = false 
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1 
debug = 2 
debug-assertions = false
incremental = false 
lto = 'fat'
opt-level = 3
overflow-checks = false
